# sayhello

./: .gitignore  Dockerfile  README.md  pyproject.toml  sayhello.py  wsgi.py
sayhello/: __init__.py  __main__.py  app.py  db.py
sayhello/static/: style.css
sayhello/templates/: index.html
