[tool.poetry]
name = "sayhello"
version = "0.1.0"
description = "A small website built using Flask and SQLAlchemy"
authors = ["Toni Karppi <karppitoni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
flask = "^1.0"
sqlalchemy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
rope = "^0.11.0"
pdoc3 = "^0.5.1"
pre-commit = "^1.14"
flake8 = "^3.7"
autopep8 = "^1.4"
gunicorn = "^19.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
